// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeaderButton /> should render correctly 1`] = `
<div
  className="PageHeaderButton"
  data-testid="PageHeaderButton"
>
  <div
    className="flex flex-col items-center justify-between text-center sm:flex-row sm:text-left"
  >
    <div
      className="text-4xl"
    />
    <div
      className="mt-3 flex sm:mt-0 sm:ml-3"
    >
      <a
        className="btn btn-primary"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<PageHeaderButton /> with button hidden should render correctly 1`] = `
<div
  className="PageHeaderButton"
  data-testid="PageHeaderButton"
>
  <div
    className="flex flex-col items-center justify-between text-center sm:flex-row sm:text-left"
  >
    <div
      className="text-4xl"
    />
  </div>
</div>
`;
